--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
 group = 'com.xjtu.sunshen'
-version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
+version = ''
 
 repositories {
     maven { url "http://maven.aliyun.com/nexus/content/groups/public/" }
